# devops-test-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml  release-please-config.json
.devcontainer/: Dockerfile
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml
scripts/: setup  setup_project
src/backend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
