[project]
name = "test-app-backend"
version = "0.0.0"
description = "back end api for tracking app"
readme = "README.md"
authors = [{ name = "Gordon Blasco", email = "myname@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]

[project.scripts]
test-app-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
