[project]
name = "study-tracker-frontend"
version = "0.1.1"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Gordon Blasco", email = "myname@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "responses>=0.25.8",
    "ruff>=0.12.8",
]
